--- a/Carpool/src/main/res/layout/activity_home_screen.xml
+++ b/Carpool/src/main/res/layout/activity_home_screen.xml
@@ -29,17 +29,35 @@
             android:layout_height="wrap_content"
             android:text="Greet Me Here"
             android:id="@+id/greet_here"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"/>
+            android:textSize="12dp"
+            android:layout_below="@+id/editText"
+            android:layout_toRightOf="@+id/textView"/>
 
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Greet in New Activity"
             android:id="@+id/green_in_new_activity"
-            android:layout_marginBottom="20dp"
-            android:layout_alignParentBottom="true"
+            android:textSize="12dp"
+            android:layout_alignTop="@+id/greet_here"
+            android:layout_toRightOf="@+id/greet_here"/>
+
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="I Have a Car"
+            android:id="@+id/have_car_button"
+            android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"/>
+
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="I need a Car"
+            android:id="@+id/need_car_button"
+            android:layout_below="@+id/have_car_button"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="18dp"/>
 
 
 </RelativeLayout>
